tests/baselines/reference/additionOperatorWithUndefinedValueAndInvalidOperands.errors.txt
additionOperatorWithUndefinedValueAndInvalidOperands.ts(11,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(12,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(13,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(14,14): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(15,14): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(16,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(19,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(20,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(21,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(22,11): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndInvalidOperands.ts(23,11): error TS18050: The value 'undefined' cannot be used here.


==== additionOperatorWithUndefinedValueAndInvalidOperands.ts (11 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    function foo(): void { return undefined }
    
    declare var a: boolean;
    declare var b: Object;
    declare var c: void;
    declare var d: Number;
    
    // undefined + boolean/Object
    var r1 = undefined + a;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r2 = undefined + b;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r3 = undefined + c;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r4 = a + undefined;
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r5 = b + undefined;
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r6 = undefined + c;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    // other cases
    var r7 = undefined + d;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r8 = undefined + true;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r9 = undefined + { a: '' };
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r10 = undefined + foo();
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r11 = undefined + (() => { });
              ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.